# nyar-number

./: .gitignore  .travis.yml  Cargo.toml  Readme.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: main.rs  prime_n.rs  warmup.rs
projects/nyar-number/: Cargo.toml  readme.md
projects/nyar-number/src/: lib.rs  mod.rs
projects/nyar-number/src/complex/: der.rs  mod.rs  ser.rs
projects/nyar-number/src/decimal/: arith.rs  der.rs  from.rs  into.rs  jupyter.rs  mod.rs  ser.rs
projects/nyar-number/src/infinity/: arith.rs  into.rs  jupyter.rs  mod.rs  ser.rs
projects/nyar-number/src/integer/: arith.rs  der.rs  from.rs  into.rs  jupyter.rs  mod.rs  ser.rs
projects/nyar-number/src/number/: arith.rs  der.rs  from.rs  into.rs  mod.rs  ser.rs
projects/nyar-number/src/rational/: arith.rs  from.rs  into.rs  jupyter.rs  mod.rs  ser.rs
projects/nyar-number/src/sign/: mod.rs
projects/nyar-number/src/unsigned/: arith.rs  der.rs  from.rs  into.rs  jupyter.rs  mod.rs  ser.rs
projects/nyar-number/src/utils/: errors.rs  mod.rs
projects/nyar-number/tests/: main.rs
projects/nyar-prime/: Cargo.toml  Readme.md
projects/nyar-prime/src/: lib.rs
projects/nyar-prime/src/special/: fermat_prime.rs  mersenne_prime.rs  pierpont_prime.rs  primorial.rs  primorial_pi.rs  truncatable_prime.m
projects/nyar-prime/tests/: count.rs
src/: auxiliary.rs  checker.rs  lib.rs
src/special/: fermat_prime.rs  fermat_primes.txt  mersenne_prime.rs  mod.rs  primorial_pi.rs  repunit_prime.rs  truncatable_prime.m  truncatable_prime.rs  truncatable_primes_left.txt  truncatable_primes_right.txt
tests/: checker.rs  count.rs
