[package]
name = "nyar_prime"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.2.3"
num = "0.2"
lazy_static = "1.3.0"

[dev-dependencies]
criterion = "0.2"

[lib]
crate-type = ["dylib", "rlib"]
name = "prime"
path = "src/lib.rs"

[[bench]]
name = "main"
harness = false