[package]
name = "nyar_prime"
version = "0.0.2"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prime lib for Nyar"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-prime"
exclude = ["/tests/*", "/.idea/*"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.2.3"
rand = "0.7.0"
num-bigint = "0.1.39"

[dev-dependencies]
criterion = "0.2"

[lib]
crate-type = ["dylib", "rlib"]
name = "prime"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'

[[bench]]
name = "main"
harness = false