[package]
name = "nyar-number"
version = "0.2.6"
authors = ["Aster <192607617@qq.com>"]
description = "Numeric types with GC optimization"
repository = "https://github.com/nyar-vm/nyar-prime"
documentation = "https://docs.rs/nyar-number"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
shredder = "0.2.0"
num = "0.4.1"
bigdecimal = "0.4.1"
serde = { version = "1.0.188", optional = true, features = ["derive"] }
rand = { version = "0.8.5", optional = true }
serde_json = "1.0.107"

[dev-dependencies]
serde_json = "1.0.107"

[features]
default = []
serde = ["dep:serde", "num/serde", "bigdecimal/serde"]
rand = ["dep:rand", "num/rand"]