[package]
name = "nyar-number"
version = "0.3.5"
authors = ["Aster <192607617@qq.com>"]
description = "Numeric types with GC optimization"
repository = "https://github.com/nyar-vm/nyar-number/tree/dev/projects/nyar-number"
documentation = "https://docs.rs/nyar-number"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
shredder = "0.2.0"
num = "0.4.1"
bigdecimal = "0.4.1"
serde = { version = "1.0.188", optional = true, features = ["derive"] }
rand = { version = "0.8.5", optional = true }
jupyter-types = { version = "0.0.2", optional = true }


[dependencies.nyar-error]
version = "0.1.*"
features = ["num", "bigdecimal"]
#path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-error'

[dev-dependencies]
serde_json = "1.0.107"

[features]
default = ["serde", "jupyter-types"]
serde = ["dep:serde", "num/serde"]
rand = ["dep:rand", "num/rand"]