[package]
name = "nyar_prime"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prime lib for Nyar"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-prime"
exclude = ["/tests/*", "/.idea/*"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.3.2"
rand = "0.8.5"
num = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[lib]
crate-type = ["dylib", "rlib"]
name = "prime"
path = "src/lib.rs"

[[bench]]
name = "main"
harness = false